v2 range by sections savepoint
